@@ -5,9 +5,10 @@
 #
 IF(NOT DEFINED _CMAKE_VERSION_CMAKE_)
     SET(_CMAKE_VERSION_CMAKE_ "DEFINED")
-    #MESSAGE("CMAKE_MAJOR_VERSION=${CMAKE_MAJOR_VERSION}")
-    #MESSAGE("CMAKE_MINOR_VERSION=${CMAKE_MINOR_VERSION}")
-    #MESSAGE("CMAKE_PATCH_VERSION=${CMAKE_PATCH_VERSION}")
+    INCLUDE(MangeMessage)
+    M_MSG(${M_INFO2} "CMAKE_MAJOR_VERSION=${CMAKE_MAJOR_VERSION}")
+    M_MSG(${M_INFO2} "CMAKE_MINOR_VERSION=${CMAKE_MINOR_VERSION}")
+    M_MSG(${M_INFO2} "CMAKE_PATCH_VERSION=${CMAKE_PATCH_VERSION}")
 
     IF(NOT CMAKE_VERSION)
 	SET(CMAKE_VERSION "${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION}.${CMAKE_PATCH_VERSION}")
