@@ -70,7 +70,7 @@
 
 IF(NOT DEFINED _MANAGE_RELEASE_ON_FEDORA_)
     SET(_MANAGE_RELEASE_ON_FEDORA_ "DEFINED")
-    SET(FEDORA_CURRENT_RELEASE_TAGS f15 f14 f13)
+    SET(FEDORA_CURRENT_RELEASE_TAGS f15 f14)
     SET(FEDORA_EPEL_RELEASE_TAGS el6 el5)
     SET(FEDORA_RAWHIDE_TAG f16)
     IF(NOT DEFINED FEDPKG_DIR)
