@@ -1,8 +1,10 @@
-PRJ_VER=0.6.1
+PRJ_VER=0.6.99
 SUMMARY=
 BODHI_UPDATE_TYPE=bugfix
 REDHAT_BUGZILLA=
 [Changes]
+- Remove f13 from FEDORA_CURRENT_RELEASE_TAGS, as Fedora 13 is end of life.
+- ManageMessages: New module.
 - ManageRelease: New module.
 - Now manageReleaseOnFedora include ManageMaintainerTargets
 - Modules are shown what they include and included by.
